added ui colors

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>CALCULATOR</h1>
-        <p>WITH HTML, CSS, JS</p>
+        <h1>Webrechner</h1>
+        <p>mit HTML, CSS, JS</p>
     </header>
 
     <main>
         <section class="calculator">
             <input type="text" id="display">
             <button id="clear" onclick="cleary()">C</button>
-            <button id="+" onclick="transfer('+')" >+</button>
+            <button id="plus" onclick="transfer('+')" >+</button>
             <button id="one" onclick="transfer(1)">1</button>
             <button id="two" onclick="transfer(2)">2</button>
             <button id="three" onclick="transfer(3)" >3</button>
